Use item IDs instead of BaseItemDto for playback initiation
ItemLauncher and KeyProcessor previously passed BaseItemDto objects from
browse rows directly to playback functions. This created an implicit
dependency on those items having been fetched with full fields
(MediaSources, MediaStreams, Chapters, etc.).

Now all playback paths use ID-based retrieval:
- Video direct play: uses retrieveAndPlay(id) which re-fetches internally
- Audio play: collects item IDs and uses retrieveAndPlay(List<UUID>)
- Add to queue: re-fetches item via ItemLauncherHelper.getItem(id)

This follows the same pattern already used by:
- Long-press Play/Shuffle (retrieveAndPlay)
- Chapter playback (ItemLauncherHelper.getItem)
- Live TV playback (ItemLauncherHelper.getItem)

This decouples playback from the field set used to fetch browse/home
screen items, making it safe to reduce requested fields for display-only
contexts without risking playback failures.