@@ -20,13 +20,12 @@ import org.jellyfin.androidtv.util.Utils;
 import org.jellyfin.androidtv.util.apiclient.Response;
 import org.jellyfin.androidtv.util.sdk.compat.JavaCompat;
 import org.jellyfin.sdk.model.api.BaseItemDto;
-import org.jellyfin.sdk.model.api.BaseItemKind;
 import org.jellyfin.sdk.model.api.CollectionType;
 import org.koin.java.KoinJavaComponent;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
+import java.util.UUID;
 
 import kotlin.Lazy;
 import timber.log.Timber;
@@ -103,17 +102,17 @@ public class ItemLauncher {
                             Timber.d("playing audio queue item");
                             mediaManager.getValue().playFrom(((AudioQueueBaseRowItem) rowItem).getQueueEntry());
                         } else if (adapter instanceof ItemRowAdapter && ((ItemRowAdapter)adapter).getQueryType() == QueryType.Search) {
-                            playbackLauncher.getValue().launch(context, Arrays.asList(rowItem.getBaseItem()));
+                            playbackHelper.getValue().retrieveAndPlay(List.of(rowItem.getBaseItem().getId()), false, null, 0, context);
                         } else {
                             Timber.d("playing audio item");
-                            List<BaseItemDto> audioItemsAsList = new ArrayList<>();
+                            List<UUID> audioItemIds = new ArrayList<>();
 
                             for (Object item : adapter) {
                                 if (item instanceof BaseRowItem && ((BaseRowItem) item).getBaseItem() != null)
-                                    audioItemsAsList.add(((BaseRowItem) item).getBaseItem());
+                                    audioItemIds.add(((BaseRowItem) item).getBaseItem().getId());
                             }
 
-                            playbackLauncher.getValue().launch(context, audioItemsAsList, 0, false, adapter.indexOf(rowItem));
+                            playbackHelper.getValue().retrieveAndPlay(audioItemIds, false, null, adapter.indexOf(rowItem), context);
                         }
 
                         return;
@@ -155,14 +154,8 @@ public class ItemLauncher {
                             navigationRepository.getValue().navigate(Destinations.INSTANCE.itemDetails(baseItem.getId()));
                             break;
                         case Play:
-                            //Just play it directly
-                            playbackHelper.getValue().getItemsToPlay(context, baseItem, baseItem.getType() == BaseItemKind.MOVIE, false, new Response<List<BaseItemDto>>() {
-                                @Override
-                                public void onResponse(List<BaseItemDto> response) {
-                                    if (!isActive()) return;
-                                    playbackLauncher.getValue().launch(context, response);
-                                }
-                            });
+                            //Just play it directly - retrieve full item by ID to ensure all fields are present
+                            playbackHelper.getValue().retrieveAndPlay(baseItem.getId(), false, context);
                             break;
                     }
                 }
